:bug: Restore left/top margin on first btn that's not end-aligned

--- a/styles/tool-bar.less
+++ b/styles/tool-bar.less
@@ -34,10 +34,10 @@
     }
   }
 
-  &.tool-bar-horizontal .tool-bar-btn + .tool-bar-btn {
+  &.tool-bar-horizontal .tool-bar-btn:not(.tool-bar-item-align-end) + .tool-bar-btn {
     margin-left: 0;
   }
-  &.tool-bar-vertical .tool-bar-btn + .tool-bar-btn {
+  &.tool-bar-vertical .tool-bar-btn:not(.tool-bar-item-align-end) + .tool-bar-btn {
     margin-top: 0;
   }
 
